--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apollo-server": "^2.21.1",
     "bcryptjs": "^2.4.3",
+    "communication-imroved-models": "^1.0.0",
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.0"
